Feat: bug fixes

--- a/pathways/flutter-pathway/lesson-0.mdx
+++ b/pathways/flutter-pathway/lesson-0.mdx
@@ -6,34 +6,40 @@ restriction: "YesDialog"
 publishedAt: '2023-02-01'
 ---
 
-
-
 ## Introduction
 
-In this tutorial, we're going to build a deployable smart contract and an accompanying Flutter widget to add comment threads to your apps.
+Welcome to the Flutter Web3 Pathway, where we will learn how to create a crypto payment dApp using Flutter. Blockchain technology is rapidly transforming the digital world, and cryptocurrencies are gaining wider adoption. As a result, there is an increasing need for developers to create decentralized applications (dApps) that can interact with the blockchain. Flutter, a popular framework for building mobile and web applications, provides a powerful tool for developing dApps that can connect to the blockchain. In this pathway, we will use Flutter and various packages to build a crypto payment dApp that can interact with the blockchain.
 
-### How the DAPP works
+This pathway is designed for developers who have a basic understanding of Flutter and Dart programming language and want to learn how to create dApps that connect to the blockchain. By completing this pathway, you will learn how to use Flutter and various packages to interact with the Ethereum blockchain and create mobile dApps that can enable secure and fast crypto payments.
 
-Here's what we're aiming to build.
+In this pathway, we will start by setting up our development environment and installing the necessary packages. We will then build the basic structure of our dApp and integrate the web3dart and walletconnect_dart packages to interact with the blockchain and allow wallet connections. Next, we will add user authentication and create a payment screen to enable users to make crypto payments. Finally, we will test our dApp and deploy it to a testnet.
 
-By adding comment threads such as this around our app we can let our users have conversations anywhere about anything!
+By the end of this pathway, you will have gained valuable skills that can help boost your mobile development career. You will have a solid understanding of how to create dApps that can connect to the blockchain and interact with smart contracts. You will also have experience working with various packages such as walletconnect_dart and web3dart, which can be used in other blockchain-related projects. So, let's get started and build our crypto payment dApp using Flutter
+
+## Motivation
+
+The blockchain is becoming more mainstream, and cryptocurrencies are gaining wider adoption. As a result, there is a need to create decentralized applications (dApps) that can interact with the blockchain. Flutter, a popular framework for building mobile and web applications, provides a powerful tool for developing dApps. In this pathway, we will use Flutter to build a crypto payment dApp that can interact with the blockchain.
 
 ## Prerequisites
 
-First, This tutorial assumes that you are already familiar with solidity and understand how smart contracts work and also assumes that you already know the basics of using Flutter or you can please clone the [flutter web3 celo](https://github.com/Mujhtech/flutter-web3-celo). You'll also want to make sure you've installed the MetaMask Mobile App and have a MetaMask account. If you'd like, see our prior tutorial Setting Up Your Wallet for more details on this.
+Before starting this pathway, you should have a basic understanding of Flutter and Dart programming language. If you are new to Flutter, we recommend that you take the "Flutter for beginners" pathway first. Additionally, a basic understanding of blockchain technology and cryptocurrency is helpful.
 
-For this project we'll be using a few interesting dependencies & dev dependencies:
+## Requirements
 
-- [walletconnect_dart](https://pub.dev/packages/walletconnect_dart/example)
-- [provider](https://pub.dev/packages/provider/example)
-- [http](https://pub.dev/packages/http/example)
-- [url_launcher](https://pub.dev/packages/url_launcher/example)
-- [jazzicon](https://pub.dev/packages/jazzicon/example)
-- [web3dart](https://pub.dev/packages/web3dart/example)
+To complete this pathway, you will need the following:
 
-For dev dependencies:
+- Flutter SDK: You can download Flutter from the official website (https://flutter.dev/).
+- An IDE: We recommend using Android Studio or Visual Studio Code for Flutter development.
+- Node.js: To install the necessary packages, you will need to have Node.js installed on your machine.
 
-- [build_runner](https://pub.dev/packages/build_runner)
-- [web3dart_builders](https://pub.dev/packages/web3dart_builders)
+## Packages
 
-We'll walk you through each one as we go and show you how to use them in combination to write some awesome dapps.
+To build a crypto payment dApp using Flutter, we will use the following packages:
+
+- `walletconnect_dart`: This package enables wallet connections using the WalletConnect protocol. We will use this package to allow users to connect their wallets to our dApp.
+- `web3dart`: This package provides an interface for interacting with the Ethereum blockchain. We will use this package to interact with the blockchain and retrieve account balances.
+- `flutter_web3`: This package is a Flutter plugin that wraps web3dart and provides some additional Flutter-specific functionality.
+
+> Note: We will use celo-composer, a starter code that provides a template for Flutter projects that use web3. This will give us a head start in setting up our project.
+
+In the next lesson, we will set up our development environment and install the necessary packages.
